# beads_rust

./: .gitattributes  .gitignore  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  Cargo.toml  LESSONS.md  README.md  UPGRADE_LOG.md  VCS_INTEGRATION.md  flake.nix  install.sh
.beads/: SYNC_CLI_FLAG_SEMANTICS.md  issues.jsonl
.claude/: learning-seeds.md
agent_baseline/: AGENT_JOURNEY_NOTES.md  README_first_80_lines.md
benches/: storage_perf.rs
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  CLI_REFERENCE.md  SYNC_SAFETY.md  TEST_HARNESS.md  TROUBLESHOOTING.md  lessons.tex
fuzz/: Cargo.toml  README.md
fuzz/corpus/content_hash/: empty_optionals  formatting_whitespace  labels_reordered  unicode
fuzz/corpus/jsonl_import/: conflict_marker  duplicate_id  malformed_json  relations  unknown_and_large_fields
fuzz/corpus/merge_issue/: close_vs_edit.json  delete_vs_update.json  dependency_tombstone.json  equal_timestamp_conflict.json  prefix_mismatch.json
fuzz/corpus/sync_cycle/: basic_roundtrip  conflict_markers  corrupt_db_family  corrupt_jsonl  custom_jsonl_path  force_flag_combinations  force_flags  missing_base_snapshot  stale_sidecars  symlinked_beads
fuzz/fuzz_targets/: common.rs  config_yaml.rs  content_hash.rs  jsonl_import.rs  markdown_import.rs  merge_issue.rs  search_issues.rs  sync_cycle.rs
scripts/: agent_smoke_test.sh  bench_regression.sh  ci-local.sh  dev-local-frankensqlite.toml
src/: health.rs  lib.rs  logging.rs  main.rs
tests/: atomic_manifest_write.rs  conformance.rs  conformance_schema.rs  conformance_text_output.rs  e2e_basic_lifecycle.rs  e2e_concurrency.rs  e2e_config_precedence.rs  e2e_create_output.rs  e2e_defer.rs  e2e_env_overrides.rs  e2e_errors.rs  e2e_git_safety_full_cli.rs  e2e_global_flags.rs  e2e_graph.rs  e2e_harness_demo.rs  e2e_history.rs  e2e_history_restore_prune.rs  e2e_labels.rs  e2e_lint.rs  e2e_list_comprehensive.rs  e2e_list_scenarios.rs  e2e_orphans.rs  e2e_queries.rs  e2e_quick_capture.rs  e2e_ready.rs  e2e_ready_limit.rs  e2e_relations.rs  e2e_routing.rs  e2e_schema.rs  e2e_search_scenarios.rs  e2e_stale.rs  e2e_stats.rs  e2e_sync_artifacts.rs  e2e_sync_failure_injection.rs  e2e_sync_fuzz_edge_cases.rs  e2e_undefer.rs  (+43 more)
(+231 files in other folders)
