[package]
name = "beads_rust-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
beads_rust = { path = "..", default-features = false }
libfuzzer-sys = "0.4"
tempfile = "3.25"

[[bin]]
name = "jsonl_import"
path = "fuzz_targets/jsonl_import.rs"
test = false
doc = false
bench = false
