[package]
name = "beads_rust-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
beads_rust = { path = "..", default-features = false }
chrono = { version = "0.4.43", features = ["serde"] }
libfuzzer-sys = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25"

[[bin]]
name = "config_yaml"
path = "fuzz_targets/config_yaml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jsonl_import"
path = "fuzz_targets/jsonl_import.rs"
test = false
doc = false
bench = false

[[bin]]
name = "merge_issue"
path = "fuzz_targets/merge_issue.rs"
test = false
doc = false
bench = false

[[bin]]
name = "content_hash"
path = "fuzz_targets/content_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sync_cycle"
path = "fuzz_targets/sync_cycle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "markdown_import"
path = "fuzz_targets/markdown_import.rs"
test = false
doc = false
bench = false
